fix rendered image filename, text alignment

--- a/less/app.less
+++ b/less/app.less
@@ -386,9 +386,9 @@ header {
 			font-weight: inherit;
 			margin: 0;
 			line-height: 110%;
-			text-indent: -0.8em;
+			text-indent: -0.7em;
 			margin-left: -0.3em;
-			margin-bottom: 0.1em;
+			margin-bottom: 0.3em;
 
 
 			span {
